--- a/client/res/layout/main.xml
+++ b/client/res/layout/main.xml
@@ -23,5 +23,11 @@
 			android:layout_gravity="bottom" 
 			android:hint="@string/enter_message_hint" 
 			/>
+		<Button android:id="@+id/button"
+			android:layout_height="wrap_content" 
+			android:layout_width="wrap_content"
+			android:layout_gravity="bottom"
+			android:text="play"
+			/>
 	</LinearLayout>
 </LinearLayout>
