--- a/client/res/layout/main.xml
+++ b/client/res/layout/main.xml
@@ -1,33 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-	<ListView android:id="@+id/ListView" 
-		android:layout_width="fill_parent" 
-		android:layout_height="fill_parent"
-		android:stackFromBottom="true"
-		android:transcriptMode="alwaysScroll"
-		android:layout_weight="1.0" 
-		/>
-	<LinearLayout 
-		android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		>
-		<EditText android:id="@+id/EditText"
-			android:layout_height="wrap_content" 
-			android:layout_width="wrap_content"
-			android:layout_weight="1.0"
-			android:layout_gravity="bottom" 
-			android:hint="@string/enter_message_hint" 
-			/>
-		<Button android:id="@+id/button"
-			android:layout_height="wrap_content" 
-			android:layout_width="wrap_content"
-			android:layout_gravity="bottom"
-			android:text="play"
-			/>
-	</LinearLayout>
+    android:orientation="vertical" >
+
+    <ListView
+        android:id="@+id/ListView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1.0"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:onClick="rock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="rock" />
+
+        <Button
+            android:onClick="paper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="paper" />
+
+        <Button
+            android:onClick="scissors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="scissors" />
+    </LinearLayout>
+
 </LinearLayout>
